// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots RemoveButton renders the remove button 1`] = `
<span>
  <button
    className="sc-kAzzGY jWgWfF sc-bZQynM gQpRYd"
    onClick={[Function]}
  >
    <svg
      height="100%"
      style={
        Object {
          "fill": "#ff1e1e",
          "height": "1rem",
          "width": "1rem",
        }
      }
      version="1.1"
      viewBox="0 0 16 16"
      width="100%"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <g
        className="torchRed"
      >
        <path
          d="M7,9 L1.00292933,9 C0.449026756,9 -8.8817842e-16,8.55613518 -8.8817842e-16,8 L-8.8817842e-16,8 C-8.8817842e-16,7.44771525 0.437881351,7 1.00292933,7 L7,7 L7,1.00292933 C7,0.449026756 7.44386482,0 8,0 L8,0 C8.55228475,0 9,0.437881351 9,1.00292933 L9,7 L14.9970707,7 C15.5509732,7 16,7.44386482 16,8 L16,8 C16,8.55228475 15.5621186,9 14.9970707,9 L9,9 L9,14.9970707 C9,15.5509732 8.55613518,16 8,16 L8,16 C7.44771525,16 7,15.5621186 7,14.9970707 L7,9 Z"
          transform="translate(8.000000, 8.000000) rotate(-315.000000) translate(-8.000000, -8.000000)"
        />
      </g>
    </svg>
  </button>
</span>
`;

exports[`Snapshots Report can display buttons for viewing and removing the report 1`] = `
<span>
  <button
    aria-label={null}
    disabled={undefined}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "background": "none",
        "backgroundColor": "unset",
        "border": "none",
        "borderRadius": "unset",
        "color": "unset",
        "cursor": "pointer",
        "display": "unset",
        "fontFamily": "unset",
        "fontSize": "unset",
        "fontWeight": "unset",
        "lineHeight": "unset",
        "margin": "unset",
        "outline": "none",
        "padding": 0,
        "transition": "unset",
        "width": "100%",
      }
    }
  >
    <span
      className="sc-kGXeez ikuGfZ"
    >
      <span
        style={
          Object {
            "color": "#59626a",
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "1rem",
            "fontWeight": 700,
          }
        }
      >
        <span
          className="sc-chPdSV jFSiVY"
        >
          Weekly Sync Report
        </span>
      </span>
      <span
        className="sc-kpOJdX vaKxX"
      >
        <button
          className="sc-kAzzGY jWgWfF sc-bZQynM gQpRYd"
          onClick={[Function]}
        >
          <svg
            height="100%"
            style={
              Object {
                "fill": "#ff1e1e",
                "height": "1rem",
                "width": "1rem",
              }
            }
            version="1.1"
            viewBox="0 0 16 16"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          >
            <g
              className="torchRed"
            >
              <path
                d="M7,9 L1.00292933,9 C0.449026756,9 -8.8817842e-16,8.55613518 -8.8817842e-16,8 L-8.8817842e-16,8 C-8.8817842e-16,7.44771525 0.437881351,7 1.00292933,7 L7,7 L7,1.00292933 C7,0.449026756 7.44386482,0 8,0 L8,0 C8.55228475,0 9,0.437881351 9,1.00292933 L9,7 L14.9970707,7 C15.5509732,7 16,7.44386482 16,8 L16,8 C16,8.55228475 15.5621186,9 14.9970707,9 L9,9 L9,14.9970707 C9,15.5509732 8.55613518,16 8,16 L8,16 C7.44771525,16 7,15.5621186 7,14.9970707 L7,9 Z"
                transform="translate(8.000000, 8.000000) rotate(-315.000000) translate(-8.000000, -8.000000)"
              />
            </g>
          </svg>
        </button>
      </span>
    </span>
  </button>
</span>
`;

exports[`Snapshots Report renders the report 1`] = `
<span>
  <li
    className="sc-dxgOiQ bjQadS"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <button
      aria-label={null}
      disabled={undefined}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "background": "none",
          "backgroundColor": "unset",
          "border": "none",
          "borderRadius": "unset",
          "color": "unset",
          "cursor": "pointer",
          "display": "unset",
          "fontFamily": "unset",
          "fontSize": "unset",
          "fontWeight": "unset",
          "lineHeight": "unset",
          "margin": "unset",
          "outline": "none",
          "padding": 0,
          "transition": "unset",
          "width": "100%",
        }
      }
    >
      <span
        className="sc-kGXeez ikuGfZ"
      >
        <span
          style={
            Object {
              "color": "#59626a",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "1rem",
              "fontWeight": 700,
            }
          }
        >
          <span
            className="sc-chPdSV jFSiVY"
          >
            Weekly Sync Report
          </span>
        </span>
        <span
          style={
            Object {
              "color": "#59626a",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "1rem",
              "fontWeight": 400,
            }
          }
        >
          <span
            className="sc-kgoBCf hIItCJ"
          >
            October 10, 2017
          </span>
        </span>
      </span>
    </button>
  </li>
</span>
`;

exports[`Snapshots ReportList loading state 1`] = `
<span>
  <div
    className="sc-jKJlTe hzCAlj"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "background": "transparent",
          "border": "none",
          "display": "flex",
          "justifyContent": "center",
          "maxHeight": "none",
          "minHeight": "8rem",
          "textAlign": "center",
          "transition": "opacity 350ms ease-in-out",
          "zIndex": 2,
        }
      }
    >
      <div
        style={
          Object {
            "background": "none",
            "borderRadius": "2px",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <div
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          <div
            style={
              Object {
                "height": "1rem",
                "margin": "0 auto 1rem auto",
                "position": "relative",
                "width": "1rem",
              }
            }
          >
            <span>
              <div
                style={
                  Object {
                    "height": "1rem",
                    "left": 0,
                    "opacity": 0,
                    "position": "absolute",
                    "top": 0,
                    "transition": "all 1000ms ease-in-out",
                    "width": "1rem",
                  }
                }
              >
                <svg
                  height="100%"
                  style={
                    Object {
                      "fill": "#59626a",
                      "height": "1rem",
                      "width": "1rem",
                    }
                  }
                  version="1.1"
                  viewBox="0 0 16 16"
                  width="100%"
                  xmlns="http://www.w3.org/2000/svg"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                >
                  <g
                    className="shuttleGray"
                  >
                    <path
                      d="M1.10241622,4.34038738 L7.75166358,7.40469806 C7.88821853,7.46764349 8.11178147,7.46764349 8.24833642,7.40469806 L14.8975838,4.34038738 C15.0341387,4.27744195 15.0341387,4.17446518 14.8975838,4.11151975 L8.24833642,1.04720908 C8.11178147,0.984263641 7.88821853,0.984263641 7.75166358,1.04720908 L1.10241622,4.11151975 C0.965861261,4.17446518 0.965861261,4.27744195 1.10241622,4.34038738"
                    />
                  </g>
                </svg>
              </div>
            </span>
          </div>
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1rem",
                "fontWeight": 400,
              }
            }
          >
            Loading...
          </span>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots ReportList renders an empty state for reports 1`] = `
<span>
  <div
    className="sc-jKJlTe hzCAlj"
  >
    <div
      className="sc-htoDjs bitDVA"
    >
      <div
        className="sc-dnqmqq eThGVq"
      />
      <h1
        className="sc-iwsKbI csSyjD"
      >
        <span
          style={
            Object {
              "color": "#59626a",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "1rem",
              "fontWeight": 400,
            }
          }
        >
          There are currently no reports
        </span>
      </h1>
      <h2
        className="sc-gZMcBi dbKLLN"
      >
        <span
          style={
            Object {
              "color": "#59626a",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "0.75rem",
              "fontWeight": 400,
            }
          }
        >
          Create one with the 'Add to Report' button on any graph
        </span>
      </h2>
    </div>
  </div>
</span>
`;

exports[`Snapshots ReportList renders an empty state for reports when from modal 1`] = `
<span>
  <div
    className="sc-jKJlTe hzCAlj"
  >
    <div
      className="sc-htoDjs bitDVA"
    >
      <div
        className="sc-dnqmqq eThGVq"
      />
      <h1
        className="sc-iwsKbI csSyjD"
      >
        <span
          style={
            Object {
              "color": "#59626a",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "1rem",
              "fontWeight": 400,
            }
          }
        >
          There are currently no reports
        </span>
      </h1>
    </div>
  </div>
</span>
`;

exports[`Snapshots ReportList renders the reports collection in a list 1`] = `
<span>
  <ol
    className="sc-ckVGcZ brbPNr"
  >
    <li
      className="sc-dxgOiQ bjQadS"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-label={null}
        disabled={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "none",
            "backgroundColor": "unset",
            "border": "none",
            "borderRadius": "unset",
            "color": "unset",
            "cursor": "pointer",
            "display": "unset",
            "fontFamily": "unset",
            "fontSize": "unset",
            "fontWeight": "unset",
            "lineHeight": "unset",
            "margin": "unset",
            "outline": "none",
            "padding": 0,
            "transition": "unset",
            "width": "100%",
          }
        }
      >
        <span
          className="sc-kGXeez ikuGfZ"
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1rem",
                "fontWeight": 700,
              }
            }
          >
            <span
              className="sc-chPdSV jFSiVY"
            >
              Weekly Sync Report
            </span>
          </span>
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1rem",
                "fontWeight": 400,
              }
            }
          >
            <span
              className="sc-kgoBCf hIItCJ"
            >
              November 7, 2017
            </span>
          </span>
        </span>
      </button>
    </li>
    <li
      className="sc-dxgOiQ bjQadS"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-label={null}
        disabled={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "none",
            "backgroundColor": "unset",
            "border": "none",
            "borderRadius": "unset",
            "color": "unset",
            "cursor": "pointer",
            "display": "unset",
            "fontFamily": "unset",
            "fontSize": "unset",
            "fontWeight": "unset",
            "lineHeight": "unset",
            "margin": "unset",
            "outline": "none",
            "padding": 0,
            "transition": "unset",
            "width": "100%",
          }
        }
      >
        <span
          className="sc-kGXeez ikuGfZ"
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1rem",
                "fontWeight": 700,
              }
            }
          >
            <span
              className="sc-chPdSV jFSiVY"
            >
              Client Social Media Campaign
            </span>
          </span>
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1rem",
                "fontWeight": 400,
              }
            }
          >
            <span
              className="sc-kgoBCf hIItCJ"
            >
              October 10, 2017
            </span>
          </span>
        </span>
      </button>
    </li>
  </ol>
</span>
`;
